--- a/stacks/wordpress/docker-stack.yml
+++ b/stacks/wordpress/docker-stack.yml
@@ -21,6 +21,14 @@ services:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_USER: wordpress
        WORDPRESS_DB_PASSWORD: wordpress
+     networks:
+       - public
+     deploy:
+       labels:
+         - "traefik.enable=true"
+         - "traefik.http.routers.echo.rule=Host(`${WORDPRESS_HOST_NAME}`)"
+         - "traefik.http.routers.echo.entrypoints=http"
+         - "traefik.http.services.echo.loadbalancer.server.port=80"
 
 volumes:
     db_data:
