--- a/stacks/wordpress/docker-stack.yml
+++ b/stacks/wordpress/docker-stack.yml
@@ -31,4 +31,8 @@ services:
          - "traefik.http.services.echo.loadbalancer.server.port=80"
 
 volumes:
-    db_data:
+  db_data:
+
+networks:
+  public:
+    external: true
